syntax = "proto3";

package storage.v1;

option go_package = "github.com/sonata-labs/sonata/gen/storage/v1";

message AudioFile {
  string file_name = 1;
  string size = 2;
  string cid = 3;
  string mime_type = 4;
}

message ImageFile {
  string file_name = 1;
  string size = 2;
  string cid = 3;
  string mime_type = 4;
}

message FileUploadMessage {
  string uploader_address = 1;
  string transcoder_address = 2;
  string original_cid = 3;
  string transcoded_cid = 4;
  string file_name = 5;
  string mime_type = 6;
  uint64 size = 7;
}

message UploadMeta {
  string file_name = 1;
  string mime_type = 2;
  uint64 size = 3;
  uint32 total_chunks = 4; // For chunked uploads
}
